SISRP-47714 - fixes spacing on lines with multiple links

--- a/src/react/components/_finances/FinancialResources/FinancialResources.scss
+++ b/src/react/components/_finances/FinancialResources/FinancialResources.scss
@@ -12,8 +12,8 @@
   }
 
   .FinancialResources__seperator {
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
   }
 
   .FinancialResources__multipleLinksContainer {
@@ -64,7 +64,7 @@
 }
 
 .FinancialResources__categoryContainer {
-  border-bottom: 1px solid $cc-color-very-light-grey;
+  border-bottom: 1px solid $cc-color-whisper;
   padding-top: 10px;
   padding-bottom: 10px;
   cursor: pointer;
